# micro-datalog

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  program_transformations.rs
common/src/program_transformations/: delta_program.rs  dependency_graph.rs  dred.rs
datalog-syntax/: Cargo.toml
datalog-syntax/src/: lib.rs
datalog_rule_macro/: Cargo.toml
datalog_rule_macro/src/: lib.rs
datalog_rule_macro/tests/: program.rs  rule.rs  semipositive_program_compile_fail.rs  stratified_program_compile_fail.rs
src/: bin.rs  engine.rs  evaluation.rs  helpers.rs  lib.rs  program_transformations.rs
src/engine/: datalog.rs  ephemeral_storage.rs  index_storage.rs  magic_evaluator.rs  storage.rs  stratified_datalog.rs  subsumptive_evaluator  subsumptive_evaluator.rs  subsumptive_table.rs
src/evaluation/: query.rs  semi_naive.rs  semi_positive.rs  spj_processor.rs
src/helpers/: helpers.rs  subsumptive_helpers.rs  subsumptive_table.rs
src/program_transformations/: adorned_atom.rs  delta_program.rs  dependency_graph.rs  magic_sets.rs
test/: magic_tests.rs  query_program_bottom_up_tests.rs  query_program_top_down_tests.rs  subsumptive_tabling_tests.rs
tests/: semi_positive_eval.rs
