workspace = { members = ["common"] }
[package]
name = "micro-datalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datalog-syntax = { path = "datalog-syntax" }
datalog_rule_macro = { path = "datalog_rule_macro" }
common = { path = "common" } 
crepe = "0.1.8"
ascent = "*"
ahash="0.8.6"
regex = "1.0"
indexmap = "2.1.0"
lasso = "0.7.2"
rayon = "1.8.0"
boxcar = "0.2.4"
petgraph = "0.6.4"

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bin]]
name = "benches"
path = "src/bin.rs"

[profile.profiling]
inherits = "release"
debug = true