[package]
name = "datalog_rule_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
datalog-syntax = { path = "../datalog-syntax" }

[dev-dependencies]
pretty_assertions = "0.7"
